[feat!] majorly updated GoogleSheetsServiceImpl, add styles, and transactional support.